<resources>
    <string name="app_name">Ejercisio9</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user">Usuario</string>
    <string name="txt_Registro">Registrar Nuevo</string>
    <string name="resistra_usuario">Registra un Usuario</string>
    <string name="ingresa_Usuario">Ingresa un usuario</string>
    <string name="ingresa_Password">Ingresa un password</string>
    <string name="repite_Password">Repite tu password</string>
    <string name="ingresa_carrera">Ingresa Carrera\n</string>
    <string name="ingresa_Nombre">Ingresa nombre</string>
    <string name="ingresa_Telefono">Ingrese su telefono</string>
    <string name="btnGuardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="cerrar">Cerrar</string>
</resources>